--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,14 @@
 {
   "importMap": "import_map.json",
   "tasks": {
+    "lume": "deno eval \"import 'lume/task.ts'\" --",
     "build": "deno task lume",
     "serve": "deno task lume -s",
-    "lume": "deno eval \"import 'lume/task.ts'\" --"
+    "local-serve": "deno run --allow-net --allow-read server.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "https://esm.sh/react@18.2.0",
+    "jsxImportSource": "react",
     "lib": [
       "dom",
       "dom.iterable",
